<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App Portfolio</string>
    <string name="my_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="app_spotify_btn">Spotify Streamer</string>
    <string name="app_spotify_toast">This button will launch the Spotify App</string>

    <string name="app_football_btn">Scores App</string>
    <string name="app_football_toast">This button will launch the Scores App</string>

    <string name="app_library_btn">Library App</string>
    <string name="app_library_toast">This button will launch the Library App</string>

    <string name="app_build_it_btn">Build It Bigger</string>
    <string name="app_build_it_toast">This button will launch the Build It Bigger App</string>

    <string name="app_xyz_reader_btn">XYZ Reader</string>
    <string name="app_xyz_reader_toast">This button will launch the XYZ Reader App</string>

    <string name="app_capstone_btn">Capstone</string>
    <string name="app_capstone_toast">This button will launch my Capstone App</string>
</resources>
