<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" android:orientation="vertical" tools:context=".MainActivity">

    <TextView android:text="@string/my_apps"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/title_font_size"
        android:gravity="center"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/spotify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/app_spotify_btn"
        android:onClick="openSpotifyApp"
        android:layout_gravity="center_vertical" />

    <Button
        android:id="@+id/scores"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/app_football_btn"
        android:onClick="openScoresApp" />

    <Button
        android:id="@+id/library"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/app_library_btn"
        android:onClick="openLibraryApp" />

    <Button
        android:id="@+id/bib"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/app_build_it_btn"
        android:onClick="openBibApp" />

    <Button
        android:id="@+id/xyz"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/app_xyz_reader_btn"
        android:onClick="openXyzApp" />

    <Button
        android:id="@+id/capstone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/app_capstone_btn"
        android:onClick="openCapstoneApp"/>

</LinearLayout>
